--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "deploy": "parcel build ./src/index.html",
+    "dev": "parcel ./src/index.html"
   },
   "repository": {
     "type": "git",
