--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "create-readme": "^2.1.1",
+    "generate-readme": "^0.3.1",
     "moment-timezone": "^0.5.26",
-    "parcel-bundler": "^1.12.3",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
